crates/pitboard/tests/snapshots/contract__use_switched.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "use",
    "ok": true,
    "data": {
      "from": "alpha",
      "to": "beta",
      "provider": "claude",
      "changed": true,
      "parked_at": "[time]",
      "adoption_ceiling_seconds": 33,
      "adoption": {
        "follows": "polling",
        "within_seconds": 33
      }
    },
    "warnings": [],
    "error": null
  }
}
