crates/pitboard/tests/snapshots/contract__use_unknown.snap
---
source: tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 1,
  "envelope": {
    "v": 1,
    "command": "use",
    "ok": false,
    "data": null,
    "warnings": [],
    "error": {
      "code": "account_unknown",
      "message": "no account is enrolled as `nobody`. Enrolled: `alpha`, `beta`. Run `pitboard enroll nobody --sign-in` to add it."
    }
  }
}
